--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dogami</string>
-    <string name="detail_game_players_number">Cantidad de jugadores: %1$s</string>
-    <string name="detail_game_time">Duración de partida: %1$s</string>
-    <string name="detail_game_complexity">Complejidad: %1$s</string>
+    <string name="detail_game_players_number">Cantidad de jugadores:</string>
+    <string name="detail_game_time">Duración de partida:</string>
+    <string name="detail_game_complexity">Complejidad:</string>
 </resources>
